# unirender

./: .gitmodules  CMakeLists.txt  README.md
include/unirender/: AccessType.h  Adaptor.h  AlphaTest.h  AttachmentType.h  BarrierType.h  Bitmap.h  Bitmap.inl  Blending.h  BufferTarget.h  BufferUsageHint.h  ClearState.h  Color.h  ColorMask.h  ComponentDataType.h  ComputeBuffer.h  Context.h  DepthRange.h  DepthTest.h  Descriptor.h  DescriptorPool.h  DescriptorSet.h  DescriptorSetLayout.h  DescriptorType.h  Device.h  DrawState.h  FacetCulling.h  Factory.h  Framebuffer.h  ImageFormat.h  ImageLayout.h  ImageUnit.h  ImageView.h  IndexBuffer.h  InternalFormat.h  Pipeline.h  PipelineLayout.h  PrimitiveRestart.h  PrimitiveType.h  ReadPixelBuffer.h  Rectangle.h  (+37 more)
include/unirender/opengl/: Buffer.h  ComputeBuffer.h  Context.h  Device.h  Framebuffer.h  ImageFormat.h  ImageUnit.h  ImageUnits.h  IndexBuffer.h  PixelBuffer.h  ReadPixelBuffer.h  RenderBuffer.h  ShaderObject.h  ShaderProgram.h  StorageBuffer.h  Texture.h  TextureBuffer.h  TextureFormat.h  TextureSampler.h  TextureUnit.h  TextureUnits.h  TypeConverter.h  Uniform.h  Uniform.inl  VertexArray.h  VertexBuffer.h  VertexBufferAttributes.h  VertexInputAttributes.h  WritePixelBuffer.h  opengl.h
include/unirender/vulkan/: Buffer.h  CommandBuffer.h  CommandBuffers.h  CommandPool.h  Context.h  ContextInfo.h  DepthBuffer.h  DescriptorPool.h  DescriptorSet.h  DescriptorSetLayout.h  Device.h  DeviceInfo.h  FrameBuffers.h  Image.h  ImageView.h  IndexBuffer.h  Instance.h  LogicalDevice.h  PhysicalDevice.h  Pipeline.h  PipelineCache.h  PipelineLayout.h  RenderPass.h  ShaderObject.h  ShaderProgram.h  Surface.h  Swapchain.h  Texture.h  TextureSampler.h  TypeConverter.h  UniformBuffer.h  Utility.h  ValidationLayers.h  VertexArray.h  VertexBuffer.h  VulkanContext.h  VulkanDevice.h
platform/msvc/: .gitignore
platform/msvc/projects/: unirender.vcxproj  unirender.vcxproj.filters  unirender_new.vcxproj  unirender_new.vcxproj.filters
source/: Adaptor.cpp  Bitmap.cpp  Context.cpp  Device.cpp  Factory.cpp  ShaderProgram.cpp  TextureUtility.cpp  VertexBufferAttribute.cpp  VertexInputAttribute.cpp
source/opengl/: Buffer.cpp  ComputeBuffer.cpp  Context.cpp  Device.cpp  Framebuffer.cpp  ImageFormat.cpp  ImageUnit.cpp  ImageUnits.cpp  IndexBuffer.cpp  PixelBuffer.cpp  ReadPixelBuffer.cpp  RenderBuffer.cpp  ShaderObject.cpp  ShaderProgram.cpp  StorageBuffer.cpp  Texture.cpp  TextureBuffer.cpp  TextureFormat.cpp  TextureSampler.cpp  TextureUnit.cpp  TextureUnits.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferAttributes.cpp  VertexInputAttributes.cpp  WritePixelBuffer.cpp
source/vulkan/: Buffer.cpp  CommandBuffer.cpp  CommandBuffers.cpp  CommandPool.cpp  Context.cpp  ContextInfo.cpp  DepthBuffer.cpp  DescriptorPool.cpp  DescriptorSet.cpp  DescriptorSetLayout.cpp  Device.cpp  DeviceInfo.cpp  FrameBuffers.cpp  Image.cpp  ImageView.cpp  IndexBuffer.cpp  Instance.cpp  LogicalDevice.cpp  PhysicalDevice.cpp  Pipeline.cpp  PipelineCache.cpp  PipelineLayout.cpp  RenderPass.cpp  ShaderObject.cpp  ShaderProgram.cpp  Surface.cpp  Swapchain.cpp  Texture.cpp  TextureSampler.cpp  UniformBuffer.cpp  Utility.cpp  ValidationLayers.cpp  VertexArray.cpp  VertexBuffer.cpp  VulkanContext.cpp  VulkanDevice.cpp
